2005-11-22  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/insert.java: New test.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/Size2DSyntax: New directory.
	* gnu/testlet/javax/print/attribute/Size2DSyntax/simple.java: New Test. 

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/ResolutionSyntax/simple.java (test):
	Added test for special toString case and bundle them into a checkpoint.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/TextSyntax: New directory.
	* gnu/testlet/javax/print/attribute/TextSyntax/constructors.java:
	New tests for constructors.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/ResolutionSyntax: New directory. 
	* gnu/testlet/javax/print/attribute/ResolutionSyntax/simple.java:
	New tests for conversion, lessThanOrEqual and equal methods.
	
2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/SetOfIntegerSyntax/Simple.java: 
	Corrected tags to JDK1.4.	
	(test): Added new tests for contains, constructor and normalization.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/SetOfIntegerSyntax/Simple.java: 
	Reformatted to match coding style.

2005-11-17  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComponent/setPreferredSize.java
	(event): New field,
	(test): Call new test methods,
	(testGeneral): New test method,
	(testPropertyChangeEvent): New test method,
	(propertyChange): New method.

2005-11-17  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComponent/setMinimumSize.java
	(event): New field,
	(test): Call new test methods,
	(testGeneral): New test method,
	(testPropertyChangeEvent): New test method,
	(propertyChange): New method.

2005-11-17  David Gilbert  <david.gilbert@object-refinery.com>
